# c

./: CMakeLists.txt  activeforks.c  activeforks.h  autodeallocate.c  autofree.c  autofree.h  catfacts.c  catfacts.h  code-global-dealloc.c  commitcount.c  commitcount.h  history.md  imperative-vs-declarative.md  lib.c  lib.h  main.c  readme.md
example/: lib.c  lib.h  main.c
example/commit-count/: CMakeLists.txt  conanfile.txt
example/pthread-bucket-flush/: CMakeLists.txt  bucket-flush.h  bucket.c  build.sh  cmark.c  lib.h  main.c  strappend.c  utils.c
