PROJECT(example)
CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/deps)

ADD_LIBRARY(lib SHARED lib.c)

FILE(GLOB SRC_LIBSC ./deps/sc/*)
ADD_LIBRARY(sc SHARED ${SRC_LIBSC})

INCLUDE(ExternalProject)
EXTERNALPROJECT_ADD(ex_qlibc
	URL https://github.com/wolkykim/qlibc/archive/refs/tags/v2.4.8.tar.gz
	URL_HASH SHA1=01829b1370079287194fc6d912b3674c119731d4
	INSTALL_COMMAND ""
)
EXTERNALPROJECT_GET_PROPERTY(ex_qlibc SOURCE_DIR)
ADD_LIBRARY(qlibc SHARED IMPORTED)
SET(QLIBC_LIBS ${SOURCE_DIR}/lib/libqlibc.so)
#SET_TARGET_PROPERTIES(qlibc PROPERTIES IMPORTED_LOCATION ${BINARY_DIR})

ADD_EXECUTABLE(example main.c)
ADD_DEPENDENCIES(example qlibc)
TARGET_LINK_LIBRARIES(example lib sc ${QLIBC_LIBS} ${CONAN_LIBS})
TARGET_COMPILE_OPTIONS(example PRIVATE -Wall -Wextra -fsanitize=address)
TARGET_LINK_OPTIONS(example PRIVATE -fsanitize=address)
